--- a/app/views/order-offer.html
+++ b/app/views/order-offer.html
@@ -432,7 +432,7 @@
             <p>
               <span class="very-light-grey bold">
                 <span translate="ORDER_OFFER.PAST_STEP.TITLE">1. Your shipment&nbsp;&nbsp;</span>
-                <a href="#">
+                <a ng-click="ctrl.remakeShipment()">
                   <i class="fa fa-pencil"></i>
                 </a>
               </span>
