integrate tooltip component

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -114,7 +114,7 @@
                   <form name="ShipmentRatingForm" class="form-horizontal" ng-submit="ShipmentRatingForm.$valid && ctrl.offer()">
                     <div class="form-group">
                       <label class="control-label col-md-2 no-padding-right required-">
-                        <span class="popmark" data-placement="right" data-title="Type" data-content="<b>Envelope</b> : envelope or document < 2.5 Kg<br><b>Parcel</b> : maximum weight 70 Kg, max Length 270 cm AND Length + 2 x Height <419 cm<br><b>Pallet</b> : max height 200 cm and max weight 3 tonnes (international only)<br><b>Bulky shipment</b> : max dimensions : 302 cm x 203 cm x 178 cm height (international only)" data-original-title="" title="" translate="MAIN.DIALOG.TYPE.TITLE">Type</span>
+                        <span class="popmark" popover-placement="right" popover-title="{{'MAIN.DIALOG.TYPE.TITLE' | translate}}" uib-popover="{{'MAIN.DIALOG.TYPE.TOOLTIP' | translate}}" popover-trigger="mouseenter" translate="MAIN.DIALOG.TYPE.TITLE">Type</span>
                       </label>
 
                       <div class="col-md-10">
@@ -146,7 +146,7 @@
 
                     <div class="form-group">
                       <label class="control-label col-md-2 no-padding-right required-">
-                        <span class="popmark" data-placement="right" data-title="Origin" data-content="Collection address for your shipment" translate="MAIN.DIALOG.ORIGIN.TITLE">Origin</span>
+                        <span class="popmark" popover-placement="right" popover-title="{{'MAIN.DIALOG.ORIGIN.TITLE' | translate}}" uib-popover="{{'MAIN.DIALOG.ORIGIN.TOOLTIP' | translate}}" popover-trigger="mouseenter" translate="MAIN.DIALOG.ORIGIN.TITLE">Origin</span>
                       </label>
 
                       <div class="col-md-10" id="address1-row">
@@ -185,7 +185,7 @@
 
                     <div class="form-group">
                       <label class="control-label col-md-2 no-padding-right required-">
-                        <span class="popmark" id="popmark-origin" data-placement="right" data-title="Origin" data-content="Collection address for your shipment" data-original-title="" title="" translate="MAIN.DIALOG.DESTINATION.TITLE">Destination</span>
+                        <span class="popmark" popover-placement="right" popover-title="{{'MAIN.DIALOG.DESTINATION.TITLE' | translate}}" uib-popover="{{'MAIN.DIALOG.DESTINATION.TOOLTIP' | translate}}" popover-trigger="mouseenter" translate="MAIN.DIALOG.DESTINATION.TITLE">Destination</span>
                       </label>
 
                       <div class="col-md-10" id="address1-row">
@@ -223,7 +223,7 @@
 
                     <div class="form-group">
                       <label class="control-label col-md-2 no-padding-right required-">
-                        <span class="popmark" data-placement="right" data-title="Parcels" data-content="Complete the details of your envelope, parcel or pallet - number of parcels, unit weight and dimensions" data-original-title="" title="" translate="MAIN.DIALOG.PARCELS.TITLE">Parcels</span>
+                        <span class="popmark" popover-placement="right" popover-title="{{'MAIN.DIALOG.PARCELS.TITLE' | translate}}" uib-popover="{{'MAIN.DIALOG.PARCELS.TOOLTIP' | translate}}" popover-trigger="mouseenter" translate="MAIN.DIALOG.PARCELS.TITLE">Parcels</span>
                       </label>
                       <div class="col-md-10">
                         <div class="parcels-container">
@@ -269,7 +269,7 @@
 
                     <div class="form-group form-group-no-margin">
                       <label class="control-label col-md-2 no-padding-right required-">
-                        <span class="popmark" data-placement="right" data-title="Date" data-content="Collection date requested" data-original-title="" title="" translate="MAIN.DIALOG.PARCELS.DATE">Date</span>
+                        <span class="popmark" popover-placement="right" popover-title="{{'MAIN.DIALOG.PARCELS.DATE' | translate}}" uib-popover="{{'MAIN.DIALOG.PARCELS.DATE_TOOLTIP' | translate}}" popover-trigger="mouseenter" translate="MAIN.DIALOG.PARCELS.DATE">Date</span>
                       </label>
 
                       <div class="col-md-4">
