--- a/app/views/ship-to-contact.html
+++ b/app/views/ship-to-contact.html
@@ -235,8 +235,6 @@
                       <span class="popmark" id="popmark-parcels" data-placement="right" data-title="Parcels" data-content="Complete the details of your envelope, parcel or pallet - number of parcels, unit weight and dimensions" data-original-title="" title="" translate="SHIP_TO_CONTACT.PARCELS.PARCELS.TITLE">Parcels</span>
                     </label>
                     <div class="col-lg-9">
-                      <input type="hidden" id="parcel_unit" name="parcel_unit" value="fr">
-                      <input type="hidden" id="with_box_dimensions" name="with_box_dimensions" value="1">
                       <div class="parcels-container">
                         <div id="parcel_list">
                           <div class="parcel" id="parcel_0">
@@ -262,18 +260,18 @@
                         </div>
 
                         <div class="parcel-actions pull-left">
-                          <a href="#" style="padding-right:14px;">
+                          <a style="padding-right:14px;">
                             <i class="glyphicon glyphicon-plus-sign"></i>
                             <span translate="SHIP_TO_CONTACT.PARCELS.PARCELS.ADD_PARCEL">Add a parcel</span>
                           </a>
                           <span id="switch_parcel_unit_fr" style="display: none;">
-                            <a href="#" style="padding-right:14px;">
+                            <a style="padding-right:14px;">
                               <i class="glyphicon glyphicon-refresh"></i>
                               <span translate="SHIP_TO_CONTACT.PARCELS.PARCELS.CHANGE_UNIT"> Change unit of measure (lbs/inch)</span>
                             </a>
                           </span>
                           <span id="switch_parcel_unit_us">
-                            <a href="#" style="padding-right:14px;">
+                            <a style="padding-right:14px;">
                               <i class="glyphicon glyphicon-refresh"></i>
                               <span translate="SHIP_TO_CONTACT.PARCELS.PARCELS.CHANGE_UNIT"> Change unit of measure (lbs/inch)</span>
                             </a>
